Use fix pool size of virtual threads (probably unnecessary other than the naming of the thread).